# oscc-node-test

./: CMakeLists.txt
oscc/api/include/: oscc.h
oscc/api/src/: oscc.c
src/: oscc_control_cpp.cpp  oscc_control_test.c
